--- a/css/colour.css
+++ b/css/colour.css
@@ -1,5 +1,5 @@
 .header { background: #405972; }
-#banner { background: #405972; color: #fff    }
+#banner { background: #fff; color: #fff    }
 #clientes { background: #fff; color: #00aece    }
 #portfolio { background: #10D7CC; color: #fff  }
 #banner3 { background: #fff;  }
