--- a/css/theme_networks.css
+++ b/css/theme_networks.css
@@ -56,6 +56,7 @@ small { letter-spacing: 0.2em; font-size: 11px; }
 .pad45 { padding-top: 45px; }
 .pad30 { padding-top: 30px; }
 .pad10 { padding-top: 10px; }
+.pad-10 { padding-bottom: 10px; }
 
 /* Margins */
 .marg-right5 { margin-right: 5px; }
@@ -84,9 +85,9 @@ a:hover { text-decoration: none; }
 
 /**** TYPOGRAPHY ****/
 h1,h2,h3,h4,h5,h6 { font-weight: 300; letter-spacing: -0.25px; font-family: 'Lato', sans-serif;}
-h1 { font-size: 24px; line-height: 40px!important;  }
-h2 { font-size: 21px;  line-height: 30px!important; }
-h3 { font-size: 18px; line-height: 25px!important;  }
+h1 { color:#fff; font-size: 57px; line-height: 40px!important;  }
+h2 { color:#fff; font-size: 30px;  line-height: 30px!important; }
+h3 { color:#fff; font-size: 70px; line-height: 50px!important; }
 h4 { font-size: 16px; line-height: 25px!important; margin-bottom: 10px; }
 h5 { font-size: 15px; line-height: 22px!important; margin-bottom: 10px; }
 h6 { font-size: 14px; line-height: 22px!important; margin-bottom: 10px; }
