--- a/css/colour.css
+++ b/css/colour.css
@@ -17,6 +17,10 @@
 a { color: #fff; }
 a:hover { color: #F0F0F0; }
 
+/**** ICONS ****/
+h5 { color: #00aece; }
+h5:hover { color: #405972; }
+
 /***************************************************
 	MENU
  ***************************************************/
